--- a/application/client/src/pages/Styling/register.scss
+++ b/application/client/src/pages/Styling/register.scss
@@ -22,14 +22,17 @@
       padding: 50px;
       display: flex;
       flex-direction: column;
-      gap: 30px;
+
+      //gap: 150px;
 
       h2 {
         font-size: 30px;
         line-height: 40px;
+        gap: 50px;
       }
       p {
         color: black;
+        gap: 20px;
       }
       span {
         font-size: 16px;
@@ -39,7 +42,6 @@
         width: 50%;
         background-color: #f4fffb;
         border: none;
-
         margin-right: 20px;
         padding: 10px;
         font-weight: bold;
