--- a/application/client/src/pages/Styling/register.scss
+++ b/application/client/src/pages/Styling/register.scss
@@ -36,16 +36,18 @@
       //gap: 150px;
 
       h2 {
-        font-size: 55px;
-        line-height: 70px;
+        font-size: 40px;
+        line-height: 50px;
 
         font-weight: bolder;
       }
       p {
+        position: relative;
         padding: 0;
+        color: black;
       }
       span {
-        color: f4fffb;
+        color: black;
         font-size: 16px;
         font-weight: bold;
       }
@@ -57,7 +59,7 @@
         padding: 10px;
         font-weight: bold;
         cursor: pointer;
-        opacity: 0.8;
+        opacity: 0.4;
       }
     }
 
@@ -189,8 +191,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 120px;
-  height: 120px;
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
   overflow: hidden;
   margin: 0 auto 20px;
@@ -206,27 +208,22 @@
 .default-image {
   width: 100%;
   height: 100%;
-  background-color: #ccc;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  position: relative;
+  background-color: #ccc;
 }
-
 .default-image i {
   font-size: 60px;
   color: #fff;
+  margin-top: 1.5rem;
 }
-
-.default-image i span {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 0.5em;
-  line-height: 1;
+.default-image span {
+  margin-top: 0rem;
+  align-items: center;
   text-align: center;
-  color: white;
+  color: #fff;
+  font-weight: 500;
 }
 
 .default-image input[type='file'] {
