--- a/application/client/src/pages/Styling/login.scss
+++ b/application/client/src/pages/Styling/login.scss
@@ -126,6 +126,7 @@
         margin-top: 50px;
       }
       .right {
+        order: 2;
       }
     }
   }
@@ -135,9 +136,9 @@
   .login {
     .card {
       .left {
-        height: 300px;
-        order: 1;
-        margin-top: 50px;
+        height: 200px;
+        margin-top: 30px;
+        padding: 20px;
         h1 {
           font-size: 40px;
           line-height: 50px;
