--- a/application/client/src/pages/Styling/register.scss
+++ b/application/client/src/pages/Styling/register.scss
@@ -35,17 +35,25 @@
 
       //gap: 150px;
 
-      h2 {
-        font-size: 55px;
-        line-height: 70px;
-
+      .welcome {
+        text-decoration: none !important;
         font-weight: bolder;
+        cursor: pointer;
+        color: white;
+
+        h2 {
+          font-size: 40px;
+          font-weight: bolder;
+        }
       }
+
       p {
+        position: relative;
         padding: 0;
+        color: black;
       }
       span {
-        color: f4fffb;
+        color: black;
         font-size: 16px;
         font-weight: bold;
       }
@@ -57,7 +65,7 @@
         padding: 10px;
         font-weight: bold;
         cursor: pointer;
-        opacity: 0.8;
+        opacity: 0.4;
       }
     }
 
@@ -69,6 +77,10 @@
       justify-content: center;
       gap: 50px;
       width: 50%;
+      h1 {
+        text-align: center;
+        color: black;
+      }
       form {
         display: flex;
         flex-direction: column;
@@ -120,7 +132,7 @@
         margin-top: 50px;
       }
       .left {
-        order: 2;
+        // order: 2;
       }
     }
   }
@@ -179,4 +191,53 @@
   display: grid;
   grid-template-columns: 1.3fr 6fr 0.5fr;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.08);
+}
+
+.profile-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto 20px;
+  position: relative;
+}
+
+.profile-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.default-image {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ccc;
+}
+.default-image i {
+  font-size: 60px;
+  color: #fff;
+  margin-top: 1.5rem;
+}
+.default-image span {
+  margin-top: 0rem;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  font-weight: 500;
+}
+
+.default-image input[type='file'] {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
