cards used for dahsboard are changed to match story board

--- a/application/client/src/components/categories/Categories.css
+++ b/application/client/src/components/categories/Categories.css
@@ -4,3 +4,15 @@
     letter-spacing: -1px;
     text-align: center;
 }
+
+.cardImg {
+    width: 100%;
+    height: auto;
+    padding: 0px 8px 0px 0px;
+    border-radius: 2% 5% 5% 0%;
+}
+
+.userImg {
+    width: 100%;
+    height: auto;
+}
