post detail page redone to look like story board

--- a/application/client/src/App.css
+++ b/application/client/src/App.css
@@ -1,3 +1,4 @@
+/* change 'choose file' to 'choose imgae' in create new post */
 .custom-file-upload {
     background-color: #f0f0f0; /* grey background */
     border: 1px solid #000; /* black thin line border */
@@ -11,9 +12,22 @@
     border-radius: 3px; /* slightly rounded corners */
     user-select: none;
 }
-
 .custom-file-upload:hover {
     background-color: #e0e0e0; /* slightly darker grey on hover */
+}
+
+/* giving cards hover styling */
+.card-hover {
+    width: 33rem;
+    margin: 20px 20px 15px 22px;
+    padding: 0;
+    transition: transform 0.3s;
+}
+  
+.card-hover:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
 }
   
   
