--- a/application/client/src/pages/Styling/login.scss
+++ b/application/client/src/pages/Styling/login.scss
@@ -1,29 +1,28 @@
 .login {
-  height: 100vh;
   background-color: #f4fffb;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 120px;
+  height: 70%;
 
   .card {
     width: 50%;
     min-width: 760px;
-
+    min-height: 600px;
+    height: 70%;
     display: flex;
+    flex-direction: row;
     background-color: white;
     border-radius: 10px;
-    min-height: 600px;
-    flex-direction: row;
-    // max-height: 100vh;
+    height: 630px;
     @media (min-width: 768px) {
       flex-direction: row;
     }
-
     .left {
       flex: 1;
       background: url('https://images.unsplash.com/photo-1594964643411-aacab76a7c0e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80')
         center;
-      // max-height: 100%;
       opacity: 1;
       background-size: cover;
       padding: 50px;
@@ -32,31 +31,20 @@
       gap: 30px;
       color: white;
       width: 50%;
+      height: 630px;
       @media (min-width: 768px) {
         width: 50%;
       }
-
       h1 {
         font-size: 80px;
         line-height: 90px;
         font-weight: bold;
       }
-      p {
-        padding: 0;
-      }
+
       span {
-        font-size: 16px;
+        margin-top: 60px;
+        font-size: 18px;
         font-weight: bold;
-      }
-      button {
-        width: 30%;
-        background-color: #f4fffb;
-        border: none;
-        margin-top: 10px;
-        padding: 5px;
-        font-weight: bold;
-        cursor: pointer;
-        opacity: 0.4;
       }
     }
 
@@ -68,22 +56,24 @@
       justify-content: center;
       gap: 50px;
       width: 50%;
-
       h1 {
-        color: #555;
+        text-align: center;
         font-size: 30px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+        justify-content: center;
       }
 
       form {
         display: flex;
         flex-direction: column;
         gap: 30px;
+        justify-content: center;
+        margin-bottom: 10px;
 
         input {
           border: none;
           border-bottom: 1px solid lightgray;
-          padding: 10px;
+          padding: 20px;
           font-size: 16px;
         }
 
@@ -91,15 +81,20 @@
           width: 100%;
           padding: 10px;
           border: none;
-          background-color: #f4fffb;
+          background-color: #b3f5ef;
           font-size: 18px;
           font-weight: bold;
           cursor: pointer;
-          transition: opacity 0.3s ease-in-out;
-
+          margin-top: 20%;
           &:hover {
             opacity: 0.8;
           }
+        }
+
+        p {
+          font-size: 16px;
+          padding: 10px;
+          margin-left: 15px;
         }
       }
     }
