--- a/application/client/src/pages/Styling/register.scss
+++ b/application/client/src/pages/Styling/register.scss
@@ -41,7 +41,7 @@
         cursor: pointer;
         color: white;
         margin-top: 5px;
-        h2 {
+        h1 {
           margin-top: 5px;
           font-size: 40px;
           font-weight: bolder;
@@ -53,11 +53,10 @@
         text-align: center;
         margin-left: 1px;
         p {
-          text-align: center;
           position: relative;
-          padding: 0;
           color: black;
           cursor: pointer;
+          font-size: 18px;
         }
       }
       span {
