images are resized on cards, search cards now getting proper data

--- a/application/client/src/components/categories/PopularDishes.css
+++ b/application/client/src/components/categories/PopularDishes.css
@@ -6,13 +6,23 @@
 }
 
 .cardImg {
-    width: 100%;
-    height: auto;
+    /* width: 100%;
+    height: auto; */
     padding: 0px 8px 0px 0px;
     border-radius: 2% 5% 5% 0%;
+    width: 290px;
+    height: 210px;
+    object-fit: cover; 
 }
 
 .userImg {
     width: 100%;
     height: auto;
 }
+
+.cardImg {
+    width: 290px;
+    height: 210px;
+    object-fit: cover; /* This will ensure the aspect ratio of the image is maintained */
+  }
+  
