following working, unfollow not working

--- a/application/client/src/pages/Styling/login.scss
+++ b/application/client/src/pages/Styling/login.scss
@@ -1,3 +1,14 @@
+body {
+  background-color: #f4fffb;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+#root {
+  background-color: #f4fffb;
+}
+
+
 .login {
   background-color: #f4fffb;
   display: flex;
