--- a/application/client/src/pages/Styling/register.scss
+++ b/application/client/src/pages/Styling/register.scss
@@ -1,3 +1,13 @@
+body {
+  background-color: #f4fffb;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+#root {
+  background-color: #f4fffb;
+}
+
 .register {
   background-color: #f4fffb;
   display: flex;
