--- a/application/client/src/pages/Styling/login.scss
+++ b/application/client/src/pages/Styling/login.scss
@@ -1,5 +1,6 @@
 body {
-  background-color: #f4fffb;
+  // background-color: #f4fffb;
+  background-color: red;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -7,7 +8,6 @@ body {
 #root {
   background-color: #f4fffb;
 }
-
 
 .login {
   background-color: #f4fffb;
