--- a/application/client/src/pages/Styling/login.scss
+++ b/application/client/src/pages/Styling/login.scss
@@ -1,6 +1,6 @@
 body {
-  // background-color: #f4fffb;
-  background-color: red;
+  background-color: #f4fffb;
+  // background-color: red;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
